resolved extra padding-left issue

--- a/src/scss/03-components/pages/pages.scss
+++ b/src/scss/03-components/pages/pages.scss
@@ -12,7 +12,9 @@
 
 .page-view {
   display: flex;
-  margin: 0 auto;
+  flex-direction: column;
+  inline-size: 100%;
+  margin-inline: auto;
   max-width: var(--max-content-width);
 
   .page-content {
@@ -95,3 +97,5 @@ nav.breadcrumbs {
 
   display: block;
 }
+
+
